# SecondShiftAugie

./: .env.template  .gitignore  LICENSE  MANIFEST.in  README.md  image.py  llm.py  main.py  pyproject.toml  requirements.txt  serp.py  settings.yaml.template  setup.cfg  status.py  system_prompt.txt  wolfram.py
cogs/: debate.py  dialogue.py  digitalocean.py  googlestuff.py  image.py  langchain.py  lc.py  llm.py  palm.py  serp.py  ssa.py  ssa_websocket.py  status.py  summary.py  wolfram.py
src/: aclient.py  log.py  responses.py
ssa/: breathe.py  runner.py
ssa/cogs/: debate.py  dialogue.py  image.py  lc.py  llm.py  musak.py  serp.py  ssa.py  status.py  wolfram.py
